# Torder

./: .gitignore  .prettierignore  README.md  RULE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
docs/: Torder（今序）MVP功能清单.md  Torder（今序）产品需求简表.md  Torder（今序）分阶段开发方案书.md  Torder（今序）原型稿重构分阶段方案.md  Torder（今序）技术方案书.md  Torder（今序）阶段0低保真原型.html  Torder（今序）阶段1开发环境检查记录.md  Torder（今序）阶段2数据层验证记录.md  Torder（今序）阶段3任务核心验证记录.md  Torder（今序）阶段4主界面验证记录.md  Torder（今序）阶段5搜索筛选标签验证记录.md  Torder（今序）阶段6设置主题导入导出验证记录.md  Torder（今序）阶段7提醒托盘快捷键验证记录.md
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  tray.rs
src-tauri/src/commands/: app.rs  backup.rs  database.rs  list.rs  mod.rs  settings.rs  tag.rs  task.rs
src-tauri/src/db/: backup_repository.rs  database_tests.rs  list_repository.rs  migrations.rs  mod.rs  settings_repository.rs  tag_repository.rs  task_repository.rs
src/app/: App.tsx  taskDates.ts  taskViews.ts  theme.ts
src/components/common/: EmptyState.tsx  HighlightedText.tsx  SectionHeader.tsx  ToastHost.tsx  ViewMenu.tsx
src/components/detail/: DetailBlock.tsx  TaskDetailPanel.tsx
src/components/dialog/: ConfirmDialog.tsx  DialogFooter.tsx  DialogShell.tsx  ListCreateDialog.tsx  ShortcutsDialog.tsx  TaskCreateDialog.tsx
src/components/layout/: AppSidebar.tsx  MainHeader.tsx  Sidebar.tsx  SidebarItem.tsx  WindowTitleBar.tsx
src/components/reminder/: ReminderToast.tsx
src/components/settings/: SettingsPage.tsx
src/components/task/: QuickAdd.tsx  TagManagerDialog.tsx  TaskBoard.tsx  TaskCalendar.tsx  TaskCard.tsx  (+10 more)
src/constants/: listConfig.ts  taskConfig.ts
src/hooks/: useAppInit.ts  useKeyboardShortcuts.ts  usePresence.ts  useToast.ts  useTrayQuickAdd.ts
src/services/: appService.ts  backupService.ts  browserTaskMock.ts  browserTaskQuery.ts  listService.ts  reminderService.ts  settingsService.ts  tagService.ts  taskService.ts
src/stores/: taskStore.ts
src/styles/: base.css  board.css  buttons.css  calendar.css  detail.css  dialog.css  feedback.css  globals.css  layout.css  responsive.css  task-list.css  tokens.css
src/types/: backup.ts  database.ts  settings.ts  ui.ts
src/utils/: calendarHelpers.ts  taskHelpers.ts
