[package]
name = "torder"
version = "1.0.0"
description = "Torder（今序）本地优先待办桌面应用"
authors = ["Zhaxideler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "torder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
uuid = { version = "1.24.0", features = ["v4"] }
window-vibrancy = "0.6"

[profile.release]
panic = "abort"
codegen-units = 16
lto = false
opt-level = "s"
strip = true

# windows crate 体量极大，名字解析阶段容易 OOM。
# opt-level=0 让 rustc 早期 pass 跳过大量优化分析，显著降低内存峰值。
# windows API 绑定本质是 FFI，不优化对运行时性能影响可忽略。
[profile.release.package.windows]
opt-level = 0
